; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_interplayvideo.c_ipvideo_decode_block_opcode_0x3.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_interplayvideo.c_ipvideo_decode_block_opcode_0x3.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i32, i32 }

@.str = private unnamed_addr constant [37 x i8] c"motion byte = %d, (x, y) = (%d, %d)\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*, i32*)* @ipvideo_decode_block_opcode_0x3 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ipvideo_decode_block_opcode_0x3(%struct.TYPE_4__* %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8, align 1
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store i32* %1, i32** %4, align 8
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 3
  %10 = load i32, i32* %9, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %16, label %12

12:                                               ; preds = %2
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 2
  %15 = call zeroext i8 @bytestream2_get_byte(i32* %14)
  store i8 %15, i8* %5, align 1
  br label %20

16:                                               ; preds = %2
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 1
  %19 = call zeroext i8 @bytestream2_get_byte(i32* %18)
  store i8 %19, i8* %5, align 1
  br label %20

20:                                               ; preds = %16, %12
  %21 = load i8, i8* %5, align 1
  %22 = zext i8 %21 to i32
  %23 = icmp slt i32 %22, 56
  br i1 %23, label %24, label %34

24:                                               ; preds = %20
  %25 = load i8, i8* %5, align 1
  %26 = zext i8 %25 to i32
  %27 = srem i32 %26, 7
  %28 = add nsw i32 8, %27
  %29 = sub nsw i32 0, %28
  store i32 %29, i32* %6, align 4
  %30 = load i8, i8* %5, align 1
  %31 = zext i8 %30 to i32
  %32 = sdiv i32 %31, 7
  %33 = sub nsw i32 0, %32
  store i32 %33, i32* %7, align 4
  br label %47

34:                                               ; preds = %20
  %35 = load i8, i8* %5, align 1
  %36 = zext i8 %35 to i32
  %37 = sub nsw i32 %36, 56
  %38 = srem i32 %37, 29
  %39 = add nsw i32 -14, %38
  %40 = sub nsw i32 0, %39
  store i32 %40, i32* %6, align 4
  %41 = load i8, i8* %5, align 1
  %42 = zext i8 %41 to i32
  %43 = sub nsw i32 %42, 56
  %44 = sdiv i32 %43, 29
  %45 = add nsw i32 8, %44
  %46 = sub nsw i32 0, %45
  store i32 %46, i32* %7, align 4
  br label %47

47:                                               ; preds = %34, %24
  %48 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %49 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %48, i32 0, i32 0
  %50 = load i32, i32* %49, align 4
  %51 = load i8, i8* %5, align 1
  %52 = load i32, i32* %6, align 4
  %53 = load i32, i32* %7, align 4
  %54 = call i32 @ff_tlog(i32 %50, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0), i8 zeroext %51, i32 %52, i32 %53)
  %55 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %56 = load i32*, i32** %4, align 8
  %57 = load i32*, i32** %4, align 8
  %58 = load i32, i32* %6, align 4
  %59 = load i32, i32* %7, align 4
  %60 = call i32 @copy_from(%struct.TYPE_4__* %55, i32* %56, i32* %57, i32 %58, i32 %59)
  ret i32 %60
}

declare dso_local zeroext i8 @bytestream2_get_byte(i32*) #1

declare dso_local i32 @ff_tlog(i32, i8*, i8 zeroext, i32, i32) #1

declare dso_local i32 @copy_from(%struct.TYPE_4__*, i32*, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
